--- a/charts/kube-plex/values.yaml
+++ b/charts/kube-plex/values.yaml
@@ -14,10 +14,10 @@ kubePlex:
     pullPolicy: Always
 
 # Override this with the plex claim token from plex.tv/claim
-claimToken: ""
+claimToken: "claim-gbSwqovAhzTJViijPsrZ"
 
 # Set the timezone of the plex server
-timezone: Europe/London
+timezone: Europe/Oslo
 
 service:
   type: ClusterIP
@@ -41,10 +41,10 @@ service:
   # externalTrafficPolicy: Cluster
 
 ingress:
-  enabled: false
+  enabled: true
   # Used to create an Ingress record.
   hosts:
-    - chart-example.local
+    - 
   annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
@@ -83,7 +83,7 @@ persistence:
     # Optionally specify claimName to manually override the PVC to be used for
     # the data directory. If claimName is specified, storageClass and size are
     # ignored.
-    ## claimName: "plex-data-pvc"
+    claimName: "plexserver-pvc-data"
     # Optionally specify a storage class to be used for the data directory.
     # If not specified and claimName is not specified, the default storage
     # class will be used.
@@ -98,8 +98,10 @@ persistence:
     # Optionally specifify additional Data mounts.  These will be mounted as
     # /data-${name}.  This should be in the same format as the above 'data', 
     # with the additional field 'name'
-    # - claimName: "special-tv"
-    #   name: 'foo'
+    - claimName: "plexserver2-pvc-data"
+    name: 'UlsteinflixEx2'
+    - claimName: "plexserver3-pvc-data"
+    name: 'UlsteinflixEx3'
 
   config:
     # Optionally specify claimName to manually override the PVC to be used for
