--- a/charts/kube-plex/templates/deployment.yaml
+++ b/charts/kube-plex/templates/deployment.yaml
@@ -71,14 +71,14 @@ spec:
         readinessProbe:
           httpGet:
             path: /identity
-            port: 32400
+            port: pms
           initialDelaySeconds: 59
           failureThreshold: 10
           timeoutSeconds: 5
         livenessProbe:
           httpGet:
             path: /identity
-            port: 32400
+            port: pms
           initialDelaySeconds: 59
           failureThreshold: 10
           timeoutSeconds: 10
