ingress endringer kubeplex

--- a/charts/kube-plex/values.yaml
+++ b/charts/kube-plex/values.yaml
@@ -20,7 +20,7 @@ claimToken: "claim-gbSwqovAhzTJViijPsrZ"
 timezone: Europe/Oslo
 
 service:
-  type: ClusterIP
+  type: NodePort
   port: 32400
   ## Specify the nodePort value for the LoadBalancer and NodePort service types.
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
