--- a/charts/kube-plex/values.yaml
+++ b/charts/kube-plex/values.yaml
@@ -41,7 +41,7 @@ service:
   # externalTrafficPolicy: Cluster
 
 ingress:
-  enabled: false
+  enabled: true
   # Used to create an Ingress record.
   hosts:
     - 
