fjernet identity fra readiness og liveness probe

--- a/charts/kube-plex/templates/deployment.yaml
+++ b/charts/kube-plex/templates/deployment.yaml
@@ -70,14 +70,14 @@ spec:
 {{- end }}
         readinessProbe:
           httpGet:
-            path: /identity
+            path: /
             port: pms
           initialDelaySeconds: 59
           failureThreshold: 10
           timeoutSeconds: 5
         livenessProbe:
           httpGet:
-            path: /identity
+            path: /
             port: pms
           initialDelaySeconds: 59
           failureThreshold: 10
